# 19th-smartcar

./: CMakeLists.txt
libraries/doc/: version.txt
libraries/zf_common/: zf_common_debug.h  zf_common_fifo.c  zf_common_fifo.h  zf_common_headfile.h
libraries/zf_device/: zf_device_gnss.h  zf_device_imu963ra.h
libraries/zf_driver/: zf_driver_encoder.c  zf_driver_pit.c
project/code/: A_Master_ctrl.h  Algorithm.c  Algorithm.h  Common_Peripherals.c  Common_Peripherals.h  Ctest.c  FFT.H  FFT.c  GL_CRC.c  GL_CRC.h  GPS.c  GPS.h  IMU.c  IMU.h  TJC.c  TJC.h  flash_demo.c  flash_demo.h  lora.c  lora.h  motor.c  motor.h  move.c  move.h  position_calculation.c  position_calculation.h  turn.c  turn.h  voice.c  voice.h  voice_deal.c  voice_deal.h
project/iar/Debug_m0_plus/: .cyt4bb7_cm_0_plus_build_cache  .ninja_deps  .ninja_log
project/iar/Debug_m0_plus/BrowseInfo/: .ninja_deps  .ninja_log  build.ninja
project/iar/Debug_m0_plus/BrowseInfo/adc_11722776235721520015.dir/: cy_adc.pbi.dep  cy_adc.xcl  cy_adc.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/audioss_1346650047966882938.dir/: cy_i2s.xcl  cy_i2s.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/button_4990804375159372270.dir/: cy_button.xcl
project/iar/Debug_m0_plus/BrowseInfo/canfd_1800690984773873875.dir/: cy_canfd.xcl  cy_canfd.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/cpu_15938736945165268644.dir/: cy_cpu.xcl  cy_cpu.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/crypto_1190170608956581615.dir/: cy_crypto_config.xcl  cy_crypto_config.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/dma_12106025507578611576.dir/: cy_mdma.pbi.dep  cy_mdma.xcl  cy_mdma.xcl.rsp  cy_pdma.xcl  cy_pdma.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/eth_phy_18133017486186456677.dir/: cy_dp83867.xcl
project/iar/Debug_m0_plus/BrowseInfo/ethernet_6029839089178797009.dir/: cy_ethif.pbi.dep  cy_ethif.xcl  cy_ethif.xcl.rsp  edd.pbi.dep  edd.xcl  edd.xcl.rsp  edd_rx.pbi.dep  edd_rx.xcl  edd_rx.xcl.rsp  edd_tx.xcl
project/iar/Debug_m0_plus/BrowseInfo/evtgen_3404189088603873129.dir/: cy_evtgen.xcl
project/iar/Debug_m0_plus/BrowseInfo/flash_8529866181315662935.dir/: cy_flash.xcl
project/iar/Debug_m0_plus/BrowseInfo/flash_864493325053435817.dir/: cy_mw_flash.xcl
project/iar/Debug_m0_plus/BrowseInfo/gpio_3999404635324069351.dir/: cy_gpio.xcl
project/iar/Debug_m0_plus/BrowseInfo/ipc_10145506163450686023.dir/: cy_ipc_drv.xcl  cy_ipc_pipe.xcl  cy_ipc_sema.xcl
project/iar/Debug_m0_plus/BrowseInfo/lin_18429031207028094880.dir/: cy_lin.xcl
project/iar/Debug_m0_plus/BrowseInfo/lvd_6353935867039560245.dir/: cy_lvd.xcl
project/iar/Debug_m0_plus/BrowseInfo/mcwdt_4052485907822033969.dir/: cy_mcwdt.xcl  cy_mcwdt.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/mpu_5663187252346826382.dir/: cy_mpu.xcl  cy_mpu.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/power_14453085144426420577.dir/: cy_power.xcl
project/iar/Debug_m0_plus/BrowseInfo/prot_10722960861768657883.dir/: cy_prot.xcl  cy_prot.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/rev_b_4986922561640112550.dir/: system_tviibh4m_cm0plus.xcl
project/iar/Debug_m0_plus/BrowseInfo/rev_b_6162237342861132223.dir/: cy_interrupt_map.pbi.dep  cy_interrupt_map.xcl
project/iar/Debug_m0_plus/BrowseInfo/scb_15490842639181808494.dir/: cy_scb_common.xcl  cy_scb_common.xcl.rsp  cy_scb_ezi2c.xcl  cy_scb_ezi2c.xcl.rsp  cy_scb_i2c.xcl  cy_scb_i2c.xcl.rsp  cy_scb_spi.xcl  cy_scb_spi.xcl.rsp  cy_scb_uart.xcl
project/iar/Debug_m0_plus/BrowseInfo/sd_host_2982766354293506895.dir/: cy_sd_host.xcl  cy_sd_host.xcl.rsp
project/iar/Debug_m0_plus/BrowseInfo/semihosting_143864889731838620.dir/: cy_semihosting.xcl
project/iar/Debug_m0_plus/BrowseInfo/smartio_5451710003740070188.dir/: cy_smartio.xcl
project/iar/Debug_m0_plus/BrowseInfo/smif_427648126384146252.dir/: cy_smif.xcl  cy_smif_memslot.xcl  cy_smif_ver_specific.pbi.dep  cy_smif_ver_specific.xcl
project/iar/Debug_m0_plus/BrowseInfo/smif_mem_6470536964353725183.dir/: cy_smif_device_common.xcl  cy_smif_hb_flash.xcl  cy_smif_s25fl.xcl  cy_smif_s25fs.pbi.dep  cy_smif_s25fs.xcl  cy_smif_semp.pbi.dep  cy_smif_semp.xcl
project/iar/Debug_m0_plus/BrowseInfo/srom_13018798572330080582.dir/: cy_srom.pbi.dep  cy_srom.xcl
project/iar/Debug_m0_plus/BrowseInfo/startup_479057977785470282.dir/: startup.xcl
project/iar/Debug_m0_plus/BrowseInfo/sw_timer_4215635015939382130.dir/: cy_sw_tmr.xcl
project/iar/Debug_m0_plus/BrowseInfo/sysclk_16149231235676103872.dir/: cy_sysclk.pbi.dep  cy_sysclk.xcl
project/iar/Debug_m0_plus/BrowseInfo/sysflt_12293435975120599261.dir/: cy_sysflt.xcl
project/iar/Debug_m0_plus/BrowseInfo/sysint_7435970359207984181.dir/: cy_sysint.xcl
project/iar/Debug_m0_plus/BrowseInfo/syslib_16330585751512546975.dir/: cy_syslib.xcl
project/iar/Debug_m0_plus/BrowseInfo/syspm_10887939769544754770.dir/: cy_syspm.xcl
project/iar/Debug_m0_plus/BrowseInfo/sysreghc_17676636058511625587.dir/: cy_sysreghc.xcl
project/iar/Debug_m0_plus/BrowseInfo/sysreset_14586141425677365288.dir/: cy_sysreset.xcl
project/iar/Debug_m0_plus/BrowseInfo/tcpwm_422923530147891246.dir/: cy_tcpwm.xcl  (+4 more)
project/iar/Debug_m0_plus/Exe/: cyt4bb7_cm_0_plus.hex  cyt4bb7_cm_0_plus.out  cyt4bb7_cm_0_plus.sim
project/iar/Debug_m0_plus/List/: cyt4bb7_cm_0_plus.map
project/iar/Debug_m7_0/: .cyt4bb7_cm_7_0_build_cache  .ninja_deps  .ninja_log
project/iar/Debug_m7_0/BrowseInfo/: .ninja_deps  .ninja_log  build.ninja
project/iar/Debug_m7_0/Exe/: cyt4bb7_cm_7_0.hex  cyt4bb7_cm_7_0.out  cyt4bb7_cm_7_0.out.rsp  cyt4bb7_cm_7_0.sim
project/iar/Debug_m7_0/List/: cyt4bb7_cm_7_0.map
project/iar/project_config/: cyt4bb7_cm_7_0.ewd  cyt4bb7_cm_7_0.ewp  cyt4bb7_cm_7_0.ewt
project/iar/project_config/settings/: cyt4bb7_cm_0_plus.Debug.cspy.bat  cyt4bb7_cm_0_plus.Debug.cspy.ps1  cyt4bb7_cm_0_plus.Debug.general.xcl  cyt4bb7_cm_0_plus.dnx  cyt4bb7_cm_7_0.Debug.cspy.bat  cyt4bb7_cm_7_0.Debug.cspy.ps1  cyt4bb7_cm_7_0.Debug.driver.xcl  cyt4bb7_cm_7_0.Debug.general.xcl  cyt4bb7_cm_7_0.dbgdt  cyt4bb7_cm_7_0.dnx
project/iar/settings/: cyt4bb7.wsdt
project/user/: cm7_0_isr.c  cm7_1_isr.c  main_cm7_0.c
(+252 files in other folders)
